# ai

./: .gitignore  README.adoc  pyproject.toml
ai/: main.py
