[tool.poetry]
name = "ai"
version = "0.1.0"
description = ""
authors = ["Tony Foerster <anthonymfoerster@gmail.com>"]
readme = "README.adoc"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ai = "ai.main:main"
